Hotfix Dockerfile